Rebase Nex plan (v0.3) on the ats-capital-markets-app codebase
v0.2 was written against the early ATS prototype. v0.3 assesses the real
application (Alintatech-Solutions/ats-capital-markets-app @ 805753b):
verified current state and pilot-blocking gaps (auth bypass, in-memory
state across replicas, simulated EOD, Hibernate-managed schema, local
report storage, no security scanning), a strangler split into core-api,
pricing-engine and batch-reporting, Docker-first then EKS + ArgoCD on
af-south-1 keeping the Jenkins -> registry -> GitOps flow, Jenkins
security gates, front-end efficiency work, the sprint plan to the
18 Dec 2026 MVP and the Jan-Apr 2027 pilot. Word version regenerated.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PnPKkUJ7kkEgn6cEybQVif